--- a/5.md
+++ b/5.md
@@ -107,3 +107,79 @@ fun main() {
     A.bar() // Companion object called
 }
 ```
+## 2. Call back
+### 2.1 Lambda expression
+Cấu trúc đầy đủ của một lambda expression
+```kt
+fun main() {
+    val sum : (Int, Int) -> Int = {a : Int, b : Int -> a + b}
+    // val <lambdaName> : <type> -> <returnType> = { <argumentList> -> <codeBody>}
+    print(sum(1, 1)) // 2
+}
+```
+- Biểu thức của lambda luôn được bao bởi {}
+- Nếu lambda function có bất kì param nào nó phải ở trước toán tử -> (kiểu dữ liệu của param có thể được bỏ qua)
+- Body của lambda function phải ở sau toán tử ->
+### 2.2 Anonymous function
+Anonymous function giống như funtion thường, nhưng không có tên.
+```kt
+fun main() {
+    val sum = fun(a : Int, b : Int) : Int {
+        val c : Int = a + b
+        return c
+    }
+    print(sum(1, 1)) // 2
+}
+```
+### 2.3 Funtion Literal
+```kt
+fun main() {
+    val sum: Int.(Int) -> Int = { // this: Int, it: Int
+        plus(it) // this + it
+    }
+    println(1.sum(2)) // 3
+}
+```
+- Int1 là receiver, tức là thứ sẽ sử dụng funtion này.
+- Int2 là argument, tức là tham số như bình thường
+- this là bản thế, cái thứ đang thực thi hàm này, ở đây ta nghĩ ngay this chính là Int1 (receiver)
+- it là tham số truyền vào (do ở đây có mỗi một tham số nên được phép dùng it)
+
+Nếu thay `it` bằng `this` thì kết quả trả về là 2 chứ không phải 3
+```kt
+fun main() {
+    val sum: Int.(Int) -> Int = { // this: Int, it: Int
+        plus(this) // this + it
+    }
+    println(1.sum(2)) // 2
+}
+```
+### 2.4 Higher order function
+`Higher order function` là function có input là một funtion, hoặc chính nó trả về một function.
+```kt
+fun sum(a : Int, b : Int, block : (Int, Int) -> Int) : Int {
+    return block(a, b)
+}
+fun main() {
+    val c : (Int, Int) -> Int = { a, b ->
+        a + b
+    }
+    print(sum(1, 1, c))
+}
+```
+### 2.5 Callback
+```kt
+fun calc(a : Int, b : Int, f : (Int, Int) -> Int) : Int {
+    return f(a,b)
+}
+fun main() {
+    val sum : (Int, Int) -> Int = { a, b -> 
+        a + b
+    }
+    val mul : (Int, Int) -> Int = { a, b -> 
+        a * b
+    }
+    println(calc(1, 1, sum)) // 2
+    print(calc(2, 2, mul)) // 4
+}
+```
