--- a/5.md
+++ b/5.md
@@ -168,6 +168,10 @@ fun main() {
 }
 ```
 ### 2.5 Callback
+Callback là:
+- Sử dụng một funtion type là một tham số. Cũng có nghĩa đứa main function là higher order function.
+- Ở trong body của main function, nó sẽ gọi tới hàm worker (ở đây hàm worker chưa được định nghĩa, chỉ biết tên nó, các tham số truyền vào của nó và giá trị trả về)
+- Main function đang thực thi thì sẽ tạm dừng rồi nhảy tới hàm worker, đợi nó làm việc xong, trả về một kết quả rồi hàm chủ lại tiếp tục làm việc tiếp.
 ```kt
 fun calc(a : Int, b : Int, f : (Int, Int) -> Int) : Int {
     return f(a,b)
@@ -183,3 +187,10 @@ fun main() {
     print(calc(2, 2, mul)) // 4
 }
 ```
+- Lợi ích của callback:
+    + Tái sử dụng code, hạn chế lỗi: Có thể tái sử dụng lại code chỉ cần thay đổi lại hàm worker.
+    + Tăng cường tính bao đóng của OOP cho hàm worker.
+- Điểm trừ của callback:
+    + Chương trình chính phải dừng lại đợi chương trình con. Nếu hàm callback mất thời gian sẽ ảnh hưởng tới hiệu suất chương trình.
+    + Trở nên rất loạn khi sử dụng đa luồng bất đồng bộ.
+    + Khó debug, khó kiểm soát lỗi.
